# Project_faster_working

./: .gitattributes  .gitignore  README.md
tools/pattern-refine/: .gitignore  CURRENT_SLICE.md  Handoff.md  README.md  agents.md  package-lock.json  package.json  pyproject.toml  skills-lock.json
tools/pattern-refine/agent_docs/: rules-detail.md  test-guidance.md
tools/pattern-refine/agent_docs/agents/: code-reviewer.md
tools/pattern-refine/agent_docs/subagents/: implementer-agent.md  main-thread.md  progress-agent.md  status-packet-template.md
tools/pattern-refine/agent_docs/task-packets/: README.md
tools/pattern-refine/assets/fonts/: README.md
tools/pattern-refine/docs/: acceptance-contract.md  agents.md  code-map.md  delivery-closure-task-packets.md  development-notes.md  handoff-details.md  pink-dress-overlay-acceptance-method.md  pink-dress-reference-analysis.md  production-reconstruction-direction.md  skills.md
tools/pattern-refine/openspec/: project.md
tools/pattern-refine/scripts/: context_snapshot.py
tools/pattern-refine/src/pattern_refine/: __init__.py  centerline.py  classify.py  cli.py  compare.py  delivery.py  delivery_overlay.py  deviation.py  difference_report.py  evaluate.py  export.py  (+13 more)
tools/pattern-refine/tests/: test_acceptance_sample.py  test_centerline.py  test_classify.py  test_cli.py  test_compare.py  test_deviation.py  test_evaluate.py  test_features.py  test_orientation.py  test_pipeline.py  test_production_quality.py  test_reference_template.py  test_scale.py  test_semantic.py  test_simplify.py  test_smooth.py  test_vectorize.py
(+25 files in other folders)
