[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "pattern-refine"
version = "0.1.0"
description = "BJD pattern PDF cleanup and reference-guided final SVG reconstruction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF>=1.24",
  "Pillow>=10.0",
  "opencv-python>=4.9",
  "numpy>=1.26",
  "lxml>=5.0",
  "svgwrite>=1.4",
  "reportlab>=4.0"
]

[project.optional-dependencies]
ocr = [
  "pytesseract>=0.3.13"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.10"
]

[project.scripts]
pattern-refine = "pattern_refine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pattern_refine"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
